# warehouse-order-system

./: Makefile  README.md  pyproject.toml
app/: dependencies.py  main.py
app/api/: __init__.py  orders.py
app/domain/: __init__.py  entities.py
app/infrastructure/: __init__.py  mocks.py
app/schemas/: orders.py
app/services/: order_service.py  ports.py
