[project]
name = "canals"
version = "0.1.0"
description = "Take home exercise"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[tool.mypy]
python_version = "3.12"
files = ["app"]
explicit_package_bases = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
